--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
-<h1>
-  {{title}}
-</h1>
+<div>
+    <nav class="navbar navbar-default">
+        <img src='./app/fortress.png' width="40" style="float:left">
+        <a class="navbar-brand" href="#">{{title}}</a>
+    </nav>
+
+    <router-outlet></router-outlet>
+</div>
