--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div>
     <nav class="navbar navbar-default">
-        <img src='./app/fortress.png' width="40" style="float:left">
+        <img src='assets/fortress.png' width="40" style="float:left">
         <a class="navbar-brand" href="#">{{title}}</a>
     </nav>
 
