--- a/src/app/fortress/css/fortress.component.css
+++ b/src/app/fortress/css/fortress.component.css
@@ -18,7 +18,9 @@
     font-weight: 500;
     width: 96px;
 }
-
 :host .type img {
     margin-bottom: 40px;
+}
+:host h3 {
+    text-align: center;
 }
